@@ -1,6 +1,5 @@
 TODO
     - Camera options in Options window under "UI"?
-    - Show Gob HP
     - Auto Hearth
     - Smart Aim
     - Infinite zoom out on Overview map
