@@ -80,7 +80,7 @@ public class OCache implements Iterable<Gob> {
 	    cb.changed(ob);
     }
 
-    public synchronized void changeCropGobs() {
+    synchronized void changeCropGobs() {
         for(final Gob g : this) {
             if(g.getattr(GCrop.class) != null) {
                 changed(g);
@@ -88,7 +88,15 @@ public class OCache implements Iterable<Gob> {
 	}
     }
 
-    public synchronized void changeStaticGobs() {
+    synchronized void changeHealthGobs() {
+	for(Gob g : this) {
+	    if(g.getattr(GobHealth.class) != null &&
+		    g.getattr(GobHealth.class).hp < 4)
+		changed(g);
+	}
+    }
+
+    synchronized void changeStaticGobs() {
 	for(Gob g : this) {
 	    if(g.staticp() != null) {
 		changed(g);
