@@ -46,3 +46,4 @@
     - Added back bugged flower menus (aka: don't close them when you click outside them). Options -> Gameplay
     - Added back simple crops. Options -> Gameplay
     - Added back showing of crop/tree/bush stage. Options -> Gameplay
+    - Added back Showing of Gob HP. Options -> Gameplay
